--- a/index.css
+++ b/index.css
@@ -5,14 +5,34 @@
   /* outline: 1px solid red;  */
 }
 
+.body {
+  /* background: linear-gradient(
+    99deg,
+    rgba(0, 11, 161, 1) 0%,
+    rgba(119, 114, 114, 1) 74%
+  ); */
+  background-image: url(acsess/image/body-back.jpg);
+  width: 100%;
+  height: 550px;
+  padding-top: 20px;
+}
+
 header {
-  background-color: #00008b;
+  /* background: linear-gradient(
+    99deg,
+    rgba(0, 11, 161, 1) 0%,
+    rgba(119, 114, 114, 1) 74%
+  ); */
+  background-image: url(acsess/image/body-back.jpg);
+  box-shadow: 0 0 10px rgba(0 0 0 / 30%);
   color: white;
   height: 80px;
   border-radius: 40px;
   align-items: center;
-  margin-top: 2px;
   padding-top: 30px;
+  max-width: 1180px;
+  position: relative;
+  left: 6%;
 }
 
 .nav {
@@ -31,12 +51,32 @@ header {
   font-family: "Outfit", sans-serif;
 }
 
+.menu-item:hover {
+  background: -webkit-linear-gradient(
+    20deg,
+    rgba(255, 255, 255, 1) 100%,
+    rgba(97, 92, 87, 1) 10%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .logo,
-.logo a {
+.logo a,
+.logo h3 {
   cursor: pointer;
   text-decoration: none;
   color: white;
   font-family: "Outfit", sans-serif;
+}
+.logo-title:hover {
+  background: -webkit-linear-gradient(
+    20deg,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(97, 92, 87, 1) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 #dropdown-menu {
@@ -46,6 +86,16 @@ header {
   color: white;
   font-family: "Outfit", sans-serif;
   width: 60px;
+}
+
+#dropdown-menu:hover {
+  background: -webkit-linear-gradient(
+    20deg,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(97, 92, 87, 1) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 #dropdown-menu option {
@@ -61,6 +111,82 @@ header {
   font-family: "Outfit", sans-serif;
 }
 
+#lezu:hover {
+  background: -webkit-linear-gradient(
+    20deg,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(97, 92, 87, 1) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 #lezu option {
   color: black;
+}
+
+/*  */
+
+.welcome h1 {
+  background: -webkit-linear-gradient(
+    20deg,
+    rgba(179, 0, 255, 1) 0%,
+    rgba(255, 255, 255, 1) 75%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  font-family: "Josefin Sans", sans-serif;
+  font-family: "Outfit", sans-serif;
+  font-size: 40px;
+  cursor: default;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.btn-page {
+  display: flex;
+  justify-content: center;
+}
+
+@property --r {
+  syntax: "<length-percentage>";
+  initial-value: 0px;
+  inherits: false;
+}
+
+.scroll-page {
+  background-color: transparent;
+  width: 150px;
+  height: 40px;
+  border-color: aqua;
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  justify-content: center;
+  border-radius: 13px;
+  color: white;
+  font-family: "Outfit", sans-serif;
+  font-size: 15px;
+
+  place-self: center;
+  border: solid 2px #0001;
+  padding: 0 1em;
+  border-radius: 2em;
+  box-shadow: inset 1px 3px 20px #fff4;
+  background: radial-gradient(
+      circle at var(--x, 0%) var(--y, 0%),
+      darkorange calc(var(--r) - 1px),
+      transparent var(--r)
+    )
+    border-box;
+  color: white;
+
+  transition: --r 0.35s;
+
+  &:hover {
+    --r: 100%;
+  }
 }
