--- a/index.css
+++ b/index.css
@@ -12,6 +12,14 @@
   margin-bottom: 150px;
 }
 
+/* 
+#glux {
+  background-image: url(acsess/image/708765.jpg);
+  padding-top: 100px;
+  height: 100%;
+  background-image: no-repeat;
+} */
+
 header {
   background-color: transparent;
   place-self: center;
@@ -302,8 +310,109 @@ h6 {
   margin-top: 10px;
 }
 
+
+
+
 /*  */
 
+.own {
+  margin-bottom: 150px;
+}
+
+.own-info {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  align-items: center;
+}
+
+.html img {
+  width: 100px;
+  height: 110px;
+  transition: 0.5s;
+}
+
+.html-img:hover {
+  transform: translate(-5px, -10px);
+}
+
+.html,
+.css,
+.js h5,
+h6 {
+  color: rgb(0, 0, 0);
+  font-family: "Lora", serif;
+}
+
+.css img {
+  width: 100px;
+  height: 110px;
+  transition: 0.5s;
+}
+
+.css-img:hover {
+  transform: translate(-5px, -10px);
+}
+
+.own-title h1 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 100px;
+  font-family: "Outfit", sans-serif;
+  font-size: 37px;
+  background: -webkit-linear-gradient(
+    20deg,
+    rgb(220, 220, 220) 0%,
+    rgb(25, 3, 26) 70%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.css hr {
+  border: 3px solid rgb(240, 94, 15);
+  border-radius: 10px;
+  display: flex;
+  margin-top: 10px;
+}
+
+.html hr {
+  border: 3px solid rgb(240, 94, 15);
+  border-radius: 10px;
+  display: flex;
+  margin-top: 10px;
+}
+
+.js img {
+  width: 100px;
+  height: 110px;
+  transition: 0.5s;
+}
+
+.js hr {
+  border: 3px solid rgb(240, 94, 15);
+  border-radius: 10px;
+  display: flex;
+  margin-top: 10px;
+}
+
+.react img {
+  width: 12-px;
+  height: 110px;
+  transition: 0.5s;
+}
+
+.react hr {
+  border: 3px solid rgb(240, 94, 15);
+  border-radius: 10px;
+  display: flex;
+  margin-top: 10px;
+}
+
+
+
+
+/*  */
 .certificate {
   margin-bottom: 150px;
 }
@@ -328,15 +437,47 @@ h6 {
 }
 
 .certificate-item img {
-  /* border-radius: 10px; */
   width: 450px;
   height: 300px;
 }
 
 .certificate-img {
   transition: 2s;
+  box-shadow: 10px 10px 10px black;
+  border-radius: 15px;
 }
 
 .certificate-img:hover {
+  transform: scale(1.2);
+  cursor: zoom-in;
+}
+
+/*  */
+
+.project {
+  margin-bottom: 150px;
+}
+
+.project h1 {
+  text-align: center;
+  margin-bottom: 100px;
+  font-family: "Outfit", sans-serif;
+  font-size: 37px;
+  background: -webkit-linear-gradient(
+    20deg,
+    rgb(220, 220, 220) 0%,
+    rgb(25, 3, 26) 70%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.burgers {
+  border-radius: 10px;
+  box-shadow: 10px 10px 10px black;
+  transition: 2s;
+}
+
+.burgers:hover {
   transform: scale(1.2);
 }
