--- a/index.css
+++ b/index.css
@@ -310,9 +310,6 @@ h6 {
   margin-top: 10px;
 }
 
-
-
-
 /*  */
 
 .own {
@@ -324,6 +321,7 @@ h6 {
   justify-content: space-evenly;
   text-align: center;
   align-items: center;
+  margin-bottom: 70px;
 }
 
 .html img {
@@ -409,8 +407,83 @@ h6 {
   margin-top: 10px;
 }
 
+/*  */
 
+.own-info-2 {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  align-items: center;
+}
 
+.git img {
+  width: 100px;
+  height: 90px;
+  transition: 0.5s;
+}
+
+.git-img:hover {
+  transform: translate(-5px, -10px);
+}
+
+.github img {
+  width: 100px;
+  height: 100px;
+  transition: 0.5s;
+}
+
+.github-img:hover {
+  transform: translate(-5px, -10px);
+}
+
+.github hr {
+  border: 3px solid rgb(240, 94, 15);
+  border-radius: 10px;
+  display: flex;
+  margin-top: 10px;
+}
+
+.git hr {
+  border: 3px solid rgb(240, 94, 15);
+  border-radius: 10px;
+  display: flex;
+  margin-top: 10px;
+}
+
+.figma img {
+  width: 110px;
+  height: 110px;
+  transition: 0.5s;
+}
+
+.figma hr {
+  border: 3px solid rgb(240, 94, 15);
+  border-radius: 10px;
+  display: flex;
+  margin-top: 10px;
+}
+
+.corel img {
+  width: 90px;
+  height: 90px;
+  transition: 0.5s;
+}
+
+.corel hr {
+  border: 3px solid rgb(240, 94, 15);
+  border-radius: 10px;
+  display: flex;
+  margin-top: 10px;
+}
+
+.git,
+.github,
+.figma,
+.corel h5,
+h6 {
+  color: rgb(0, 0, 0);
+  font-family: "Lora", serif;
+}
 
 /*  */
 .certificate {
